test/expected/simple-timer.txt
/scripts/simple-timer.js:8
  throw new Error('trace');
  ^

Error: trace
    at Timeout.callback [as _onTimeout] (/scripts/simple-timer.js:r:c)
    at listOnTimeout (node:internal/timers:r:c)
    at process.processTimers (node:internal/timers:r:c)
    at initAsyncResource (node:internal/timers:r:c)
    at new Timeout (node:internal/timers:r:c)
    at setTimeout (node:timers:r:c)
    at Object.<anonymous> (/scripts/simple-timer.js:r:c)
    at Module._compile (node:internal/modules/cjs/loader:r:c)
    at Module._extensions..js (node:internal/modules/cjs/loader:r:c)
    at Module.load (node:internal/modules/cjs/loader:r:c)
    at Module._load (node:internal/modules/cjs/loader:r:c)
    at TracingChannel.traceSync (node:diagnostics_channel:r:c)
    at wrapModuleLoad (node:internal/modules/cjs/loader:r:c)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:r:c)
    at node:internal/main/run_main_module:r:c {
  [Symbol(originalCallSite)]: [ CallSite {}, CallSite {}, CallSite {} ],
  [Symbol(mutatedCallSite)]: [
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}, CallSite {},
    CallSite {}
  ]
}

Node.js vx.y.z
